# ML3

./: .env.example  .gitignore  .prefectignore  DEPLOYMENT.md  FUNDAMENTALS_LAYER.md  IMPLEMENTATION_SUMMARY.md  INSTALL_MAC_M3.md  MAC_M3_COMPATIBILITY.md  MAC_M3_QUICKSTART.md  Makefile  PREFECT_SETUP.md  PROJECT_SUMMARY.md  QUICKWINS_COMPLETE.md  QUICKWINS_PROGRESS.md  QUICK_FIX.md  README.md  prefect.yaml  pyproject.toml  requirements-dev.txt  requirements-mac-m3.txt  requirements.txt  setup_prefect.sh  userGuide.md
app/: api.py  diagnostics.py  streamlit_app.py  streamlit_diagnostics.py
config/: backtest.yaml  eodhd.yaml  features.yaml  labels.yaml  pit.yaml  pit_enhanced.yaml  schemas.yaml  train.yaml  universe.yaml
flows/: __init__.py  backtest.py  build_features.py  build_labels.py  build_pit.py  ingest_fundamentals.py  ingest_fundamentals_enhanced.py  ingest_prices.py  ingest_prices_enhanced.py  train.py
src/: __init__.py  backtest.py  calendars.py  cli.py  eodhd_client.py  features.py  ingest_incremental.py  labels.py  pit.py  pit_enhanced.py  registry.py  train.py  utils.py
src/backtest/: __init__.py  risk_controls.py
src/cv/: purged_kfold.py
src/fundamentals/: intervals.py  precedence.py  (+3 more)
tests/: test_cv_purged.py  test_feature_shift.py  test_features.py  test_ingest_idempotent.py  test_label_alignment.py  test_leakage.py  test_leakage_source_ts.py  test_partitioning.py  test_pit.py  test_pit_interval_bounds.py  test_pit_interval_join.py  test_precedence_policy.py  test_risk_controls.py  test_schemas.py  test_staleness.py  test_versioning_effect.py
(+2 files in other folders)
