[tool.poetry]
name = "ml3"
version = "0.1.0"
description = "Production-grade point-in-time ML market data pipeline with EODHD integration"
authors = ["ML3 Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
polars = "^0.19.0"
duckdb = "^0.9.0"
pyarrow = "^14.0.0"
fastparquet = "^2023.10.0"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"
lightgbm = "^4.1.0"
xgboost = "^2.0.0"
optuna = "^3.4.0"
prefect = "^2.14.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
streamlit = "^1.28.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
pandas-market-calendars = "^4.3.0"
plotly = "^5.18.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
shap = "^0.43.0"
onnx = "^1.15.0"
onnxruntime = "^1.16.0"
skl2onnx = "^1.16.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.5"
mypy = "^1.7.0"
ipython = "^8.17.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
ml3 = "src.cli:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
